# simple_ci_example

./: .Makefile.kate-swp  .gitignore  CMakeLists.txt  Makefile
.github/workflows/: CI.yml
include/: lib_server.hpp
lib/: .gitempty
scripts/: check.sh  format.sh
src/: lib_server.cpp
test/: CMakeLists.txt  Test  coverage_report.info  lib_server.gcda  lib_server.gcno  main.cpp
test/coverage_report/: index-sort-f.html  index-sort-l.html  index.html
test/coverage_report/src/: index-sort-f.html  index-sort-l.html  index.html  lib_server.cpp.func-sort-c.html  lib_server.cpp.func.html  lib_server.cpp.gcov.html
